panoiq_stackstorm/trino/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ingress
  #namespace: "NAMESPACE"
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /\$1
spec:
  rules:
    - host: "HOST"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino
                port: 
                  number: 32004
  ingressClassName: nginx
